--- a/manifest.json
+++ b/manifest.json
@@ -1,16 +1,16 @@
 {
-    "name": "webtest",
-    "short_name": "webtest",
+    "name": "John Hauge",
+    "short_name": "John Hauge",
     "start_url": ".",
     "display": "standalone",
     "background_color": "#0175C2",
     "theme_color": "#0175C2",
-    "description": "A new Flutter project.",
+    "description": "Game developer John Hauge's online portfolio.",
     "orientation": "portrait-primary",
     "prefer_related_applications": false,
     "icons": [
         {
-            "src": "icons/Icon-192.png",
+            "src": "https://external-content.duckduckgo.com/iu/?u=https%3A%2F%2Fvignette.wikia.nocookie.net%2Ffantendo%2Fimages%2F8%2F89%2FPS4_Controller.png%2Frevision%2Flatest%3Fcb%3D20180809043528&f=1&nofb=1",
             "sizes": "192x192",
             "type": "image/png"
         },
